--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,7 @@ body {
     font-size: 20px;
     margin: 0;
     user-select: none;
+    white-space: pre-wrap;
 }
 
 .blur-div {
